# HawkeyeSee

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  database.py  docker-compose.yml  hawkeye.py  malicious.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
hawkeye/: __init__.py  __main__.py  database.py  deduplicator.py  pcap_analyzer.py  report.py  watch.py
hawkeye/dashboard/: app.py
hawkeye/dashboard/templates/: index.html
hawkeye/detectors/: __init__.py  blacklist.py  dga.py  dnstunnel.py
hawkeye/notifiers/: __init__.py  console.py  telegram.py
tests/: conftest.py  test_database.py  test_deduplicator.py  test_detectors.py  test_report.py
